--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,17 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:q7W/ivUDVr4ItJnuuwKhaAczyTloiSmvC/D4Jow18Q4=
+APP_KEY=base64:/GTHOyqJgFjCdSf6NGNfgJPndninJaK0UFUgIVaPY3g=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=115.85.65.222
 DB_PORT=3306
 DB_DATABASE=db_empmon
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=dev_03
+DB_PASSWORD=ict_dev03
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -19,7 +19,7 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=115.85.65.222
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
