--- a/.env-onlen.txt
+++ b/.env-onlen.txt
@@ -11,7 +11,7 @@ DB_HOST=115.85.65.222
 DB_PORT=3306
 DB_DATABASE=db_empmon
 DB_USERNAME=dev_03
-DB_PASSWORD=ascent
+DB_PASSWORD=ict_dev03
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
