add model and apicontroller

--- a/.env-onlen.txt
+++ b/.env-onlen.txt
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:KC4xuFwb3l5y7As+BtQapmMJlXZB+k+7d4sjETNuZ1U=
+APP_KEY=base64:/GTHOyqJgFjCdSf6NGNfgJPndninJaK0UFUgIVaPY3g=
 APP_DEBUG=true
-APP_URL=http://localhost:8000
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
