--- a/.env-onlen.txt
+++ b/.env-onlen.txt
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:/GTHOyqJgFjCdSf6NGNfgJPndninJaK0UFUgIVaPY3g=
+APP_KEY=base64:KC4xuFwb3l5y7As+BtQapmMJlXZB+k+7d4sjETNuZ1U=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 
@@ -11,7 +11,7 @@ DB_HOST=115.85.65.222
 DB_PORT=3306
 DB_DATABASE=db_empmon
 DB_USERNAME=dev_03
-DB_PASSWORD=ict_dev0
+DB_PASSWORD=ict_dev03
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
